--- a/app-frontend/src/assets/styles/sass/pages/_dashboard.scss
+++ b/app-frontend/src/assets/styles/sass/pages/_dashboard.scss
@@ -3,7 +3,7 @@
   padding-top: 1rem;
   position: relative;
   display: flex;
-  align-items: baseline;
+  align-items: flex-start;
   margin-bottom: 2rem;
 
   h1 {
